<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222"
    android:orientation="vertical" >

      <SeekBar
          android:id="@+id/seekBar1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_centerVertical="true"
          android:progress="50" />

      <CheckedTextView
          android:id="@+id/checkedTextView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/seekBar1"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="34dp"
          android:text="@string/SloshFreq"
          android:textColor="#00F000" />

      <Spinner
          android:id="@+id/spinner1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_above="@+id/checkedTextView1"
          android:layout_alignParentRight="true"
          android:layout_marginBottom="64dp"/>

      <Button
          android:id="@+id/SloshButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/seekBar1"
          android:layout_marginRight="42dp"
          android:layout_marginTop="42dp"
          android:text="@string/ModeStart" />

      <ToggleButton
          android:id="@+id/LaserToggle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/OffButton"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="30dp"
          android:text="@string/LaserText"
          android:textOff="@string/LasersOn"
          android:textOn="@string/LasersOff" />

      <Button
          android:id="@+id/OffButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/SloshButton"
          android:layout_alignBottom="@+id/SloshButton"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="31dp"
          android:text="@string/LightsOff" />

</RelativeLayout>